--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -1,6 +1,14 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800');
 
-@import '../../bower_components/gridle/sass/grid-settings';
+// Import gridle :
+@import '../../bower_components/gridle/sass/gridle/gridle';
+
+// setup the grid (required) :
+@include gridle_setup((
+	context : 12,
+	gutter-width : 20px,
+	debug : false
+));
 @import '../../bower_components/bourbon/app/assets/stylesheets/bourbon';
 
 
@@ -21,6 +29,4 @@
 @import 'partial/page-contacto';   
 @import 'partial/page-specs';   
 @import 'partial/paginacion';    
-@import 'partial/footer';   
-@import 'partial/btn';   
-@import 'partial/queries';   
+@import 'partial/footer';  
