--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -74,9 +74,8 @@ a {
 .bg-highlight {
 	color:$second_color;
 	font:{family:$primary_font;weight:normal; }
-	background-position: -0% 0;
-	@include background-image (linear-gradient(to right, rgba(0, 0, 0, 1) 50%, #fff 50%));
-	background-size: 200.22% auto;
+	@include background-image (linear-gradient(to right, #000 50%, #fff 50%));
+	background:{position: -0% 0;size: 200.22% auto;}
 	-webkit-background-size: 200.22% auto;
 	-moz-background-size: 200.22% auto;
 	@include transition(background-position 0.5s ease-out);
@@ -93,12 +92,10 @@ a {
 .bg-highlight-inv {
 	color:$first_color;
 	font:{family:$primary_font;weight:normal; }
-	background-position: -0% 0;
-	@include background-image (linear-gradient(to right, rgba(255, 255, 255, 1) 50%, #000 50%));
-	background-size: 200.22% auto;
+	@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
+	background:{size: 200.22% auto;position: -0% 0;}
 	-webkit-background-size: 200.22% auto;
 	-moz-background-size: 200.22% auto;
-	background-position: -0% 0;
 	@include transition(background-position 0.5s ease-out);
 	padding:{left:10px;right:5px;}
 	&:hover {
@@ -123,8 +120,6 @@ a {
 			font:{size:18px;}
 		}
 	}
-	&:hover {
-	}
 }
 .metrics {
 	@include gridle(12,phoness);
@@ -147,7 +142,7 @@ a {
 			display: table;
 			font:{size:12px;}
 			border:0;
-			border-bottom:1px solid $li-border-color;
+			border:{bottom:1px solid $li-border-color;}
 			padding:{top:8px;left:0;bottom:8px; right:0;}
 			text:{transform:uppercase;}
 			i {
@@ -198,8 +193,7 @@ a {
 			@extend .no-paddings;
 			margin:{top:15px; bottom:15px;}
 			img {
-				width: 100%;
-				height: auto;
+				@extend .resp_img;
 			}
 		}
 	}
@@ -207,7 +201,7 @@ a {
 .bajada {
 	@include gridle(12);
 	font:{size:10px;transform:none;}
-	text:{align:left;}
+	@extend .text-left;
 	padding: 10px;
 	margin:{top:0; right:0; bottom:5px; right:0;}
 	@include gridle_state(desktopess, notebook-min){
