--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -16,11 +16,8 @@
 		overflow: hidden;
 		@include gridle(10, desktopess notebook-min);
 		@include gridle(12, phoness phoness-min tabless-min);
-		@include gridle_state(desktopess) {
-			float:right;
-		}
-		@include gridle_state(notebook-min) {
-			float:right;
+		@include gridle_float(right, desktopess notebook-min);
+		@include gridle_state(notebook-min){
 			height: 300px;
 		}
 		@include gridle_state(tabless-md) {
@@ -49,9 +46,7 @@
 			.encabezado {
 				@include gridle(12);
 				height: 350px;
-				background-position: center;
-				background-repeat: no-repeat;
-				background-size: cover;
+				background:{position: center;repeat: no-repeat;size: cover;}
 				display: table;
 				@include gridle_state(notebook-min) {
 					height: 300px;
@@ -79,7 +74,7 @@
 						bottom:0;
 					}
 					h1 {
-						float: left;
+						@include gridle_float(right);
 						margin:{bottom:0;left:0;}
 						text:{transform: uppercase;}
 					}
