--- a/prod/sass/partial/nav-colapse.scss
+++ b/prod/sass/partial/nav-colapse.scss
@@ -6,20 +6,18 @@
 	color:$second_color;
 	overflow-x: hidden;
 	z-index: 999; 
-	@include gridle_state(desktopess) {
-		float:left;
-	}
-	@include gridle_state(phoness tabless-md) {
+	@include gridle_float(left, desktopess);
+	@include gridle_hide(phoness tabless-min);
+	@include gridle_state(phoness tabless-md){
 		position: fixed;
 		z-index: 990;
-		display: none;
 		right:-310px;
 	}
 	@include gridle_state(tabless-min) {
 		right:-340px;
 	}
-	@include gridle_state(notebook-min) {
-		float: left;
+	@include gridle_float(left, notebook-min);
+	@include gridle_state(notebook-min){
 		display:block; 
 	} 
 	@include gridle_float(right);
@@ -39,9 +37,7 @@
 			@include gridle_float(none);
 			margin:20px auto;
 			display: block;
-			@include gridle_state(phoness tabless-min) {
-				display: none;
-			}
+			@include gridle_hide(phoness tabless-min);
 			svg {
 				fill: $second_color !important;
 			}
@@ -122,9 +118,8 @@
 				list-style: none;
 				text-decoration: none;
 				border-bottom:1px solid $first_color_3;
-				background-position: -0% 0;
 				@include background-image (linear-gradient(to right, #000 50%, #fff 50%)); 
-				background-size: 200.22% auto;
+				background:{size: 200.22% auto;position: -0% 0;}
 				-webkit-background-size: 200.22% auto;
 				-moz-background-size: 200.22% auto;
 				@include transition(background-position 0.3s ease-out);
@@ -144,10 +139,10 @@
 					color:$second_color;
 				}
 				&:hover {
-					background-position: -99.99% 0;
+					background:{position: -99.99% 0;}
 					color:$first_color;
 					@include gridle_state(notebook-min) {
-						background-position: -99.99% 0;
+						background:{position: -99.99% 0;}
 					}
 					a {
 						color:$first_color;
@@ -187,9 +182,8 @@
 					list-style: none;
 					text-decoration: none;
 					border-bottom:1px solid $first_color_3;
-					background-position: -0% 0;
 					@include background-image (linear-gradient(to right, #000 50%, #fff 50%)); 
-					background-size: 200.22% auto;
+					background:{size: 200.22% auto;position: -0% 0;}
 					-webkit-background-size: 200.22% auto;
 					-moz-background-size: 200.22% auto;
 					@include transition(background-position 0.3s ease-out);
@@ -208,7 +202,6 @@
 						}
 						color:$second_color;
 					}
-					@extend .trama;
 					&.fa {
 						&:before {
 							padding: {top:20px;right:0px; bottom:20px; left:24px;}
@@ -228,10 +221,10 @@
 						}
 					}	
 					&:hover {
-						background-position: -99.99% 0;
+						background:{position: -99.99% 0;}
 						color:$first_color;
 						@include gridle_state(notebook-min) {
-							background-position: -99.99% 0;
+							background:{position: -99.99% 0;}
 						}
 						a {
 							color:$first_color;
@@ -249,7 +242,7 @@
 					}
 					
 					&:first-child {
-						float:none;
+						@include gridle_float(none);
 						padding:{top:20px !important; right:20px; bottom:0 !important; left:20px;}
 						margin:{bottom:-4px;}
 						background:{position: -0% 0;}
@@ -317,8 +310,8 @@
 							background-image: url("../img/pattern_inv.jpg") !important;
 							color:$second_color;
 							 a {
-						 		background: $first_color;
-								color:$second_color;
+						 		background: $second_color;
+								color:$first_color;
 							 }
 						}		
 					}
