--- a/prod/sass/partial/search.scss
+++ b/prod/sass/partial/search.scss
@@ -1,9 +1,7 @@
 .search-content {
 	@include gridle(12, phoness-min phoness tabless-md tabless-min tabless); 
 	@include gridle(10, notebook-min desktopess);
-	@include gridle_state(notebook-min desktopess){
-		float:right;
-	}
+	@include gridle_float(right, notebook-min desktopess);
 	@include gridle(12, phoness-min tabless-min);
 	@include gridle_state(phoness-min) {
 		padding:0 5px;
@@ -40,7 +38,7 @@
 			@include gridle(12);
 			@extend .shadow;
 			margin:{top:20px;}
-			border-bottom:1px solid $li-border-color;
+			border:{bottom:1px solid $li-border-color;}
 			background: $second_color;
 			padding:20px 10px;
 			.img-search {
@@ -94,14 +92,13 @@
 						margin:0;
 					}
 				}
+//PATTERN CLASS
 				.pattern {
 					height: 40px;
 					padding:{top:5px; right:5px; bottom:5px; left:3px;}
-					background-position: -0% 0;
 					@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
-					background-size: 200.22% auto;
+					background:{position: -0% 0;size: 200.22% auto;}
 					@include transition(background-position 0.5s ease-out);
-					@extend .trama;
 					.highlight-inv {
 						font:{size:18px;}
 						display: table;
