--- a/prod/sass/partial/page-categoria.scss
+++ b/prod/sass/partial/page-categoria.scss
@@ -39,12 +39,8 @@
 					.header-destacado {
 						@include gridle_hide(); 
 					}
-
-// PATTERN CLASS
-					.pattern {
-						@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
-						background:{size: 200.22% auto;position: -0% 0;}
-						@include transition(background-position 0.5s ease-out);
+					.content-pattern {
+						@extend .pattern;
 						.highlight-inv {
 							font:{size:18px;}
 							display: table;
