--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -29,4 +29,5 @@
 @import 'partial/page-contacto';   
 @import 'partial/page-specs';   
 @import 'partial/paginacion';    
+@import 'partial/login';    
 @import 'partial/footer';  
