--- a/prod/sass/partial/page-specs.scss
+++ b/prod/sass/partial/page-specs.scss
@@ -15,8 +15,7 @@
 			padding:{top: 80px;bottom: 120px;}
 		}
 		@include gridle_state(notebook-min) {
-			margin:{top: 10px;}
-			padding:{top: 30px;bottom: 75px;}
+			padding:{top: 30px;bottom: 45px;}
 		}
 		@include gridle_state(tabless-md) {
 			margin:{top:0;}
@@ -33,6 +32,7 @@
 			@include gridle_float(none);
 			margin:0 auto;
 			display: block;
+			padding:{bottom: 30px;}
 			.acordeon {
 				@extend .no-paddings; 
 				border:1px solid $second_color;
