--- a/prod/sass/partial/login.scss
+++ b/prod/sass/partial/login.scss
@@ -12,16 +12,16 @@
 		@include gridle(6, tabless-md);
 		@include gridle(9, phoness);
 		@include gridle(11, phoness-min);
-		text-align: center;
-  		padding: 15px 0;
-		display: block;
-		float: none;
+		@include gridle_float(none);
+		@extend .text-center;
+		background-repeat: $second_color;
 		border: 0;
 		color:$first_color;
-		background-repeat: $second_color;
+		display: block;
 		font:{size: 13px;weight:700;}
 		letter-spacing: 0;
 		margin: 0 auto;
+		padding: 15px 0;
 		@include gridle_state(phoness-min) {
 			padding: 8px 0;
 		}
@@ -42,15 +42,16 @@
 		@extend .no-paddings;
 		display: inherit;
 		h1 {
-			@include gridle(5);
+			@include gridle(7, desktopess);
+			@include gridle(8, notebook-min);
 			@include gridle(11, phoness-min);
 			@include gridle_float(none);
 			margin: 0 auto;
 			display: block;
-			height: 240px;
+			height: 280px;
 			margin:{top:50px;}
 			@include gridle_state(notebook-min) {
-				height: 200px;
+				height: 220px;
 				margin:{top: 25px;}
 			}
 			@include gridle_state(tabless-md) {
