--- a/prod/sass/partial/login.scss
+++ b/prod/sass/partial/login.scss
@@ -6,7 +6,7 @@
 	color:$second_color;
 	height: 100%;
 	position: absolute;
-	overflow: scroll;
+	overflow: scroll;   
 	.message {
 		@include gridle(4);
 		@include gridle(6, tabless-md);
@@ -20,7 +20,7 @@
 		display: block;
 		font:{size: 13px;weight:700;}
 		letter-spacing: 0;
-		margin: 0 auto;
+		margin:{top:20px;right:auto;bottom:0;left:auto;}
 		padding: 15px 0;
 		@include gridle_state(phoness-min) {
 			padding: 8px 0;
@@ -66,7 +66,7 @@
 				@extend .no-paddings;
 				background-size:100%;
 				height: 100%;  
-				display: block;				
+				display: block;				  
 			}
 		}
 		form {
