--- a/prod/sass/partial/login.scss
+++ b/prod/sass/partial/login.scss
@@ -9,7 +9,7 @@
 	overflow: scroll;   
 	.message {
 		@include gridle(4);
-		@include gridle(6, tabless-md);
+		@include gridle(6, notebook-min tabless-md);
 		@include gridle(9, phoness);
 		@include gridle(11, phoness-min);
 		@include gridle_float(none);
@@ -23,7 +23,7 @@
 		margin:{top:20px;right:auto;bottom:0;left:auto;}
 		padding: 15px 0;
 		@include gridle_state(phoness-min) {
-			padding: 8px 0;
+			padding: 8px 0;  
 		}
 	}
 	#login_error {
@@ -51,7 +51,7 @@
 			height: 280px;
 			margin:{top:50px;}
 			@include gridle_state(notebook-min) {
-				height: 220px;
+				height: 240px;
 				margin:{top: 25px;}
 			}
 			@include gridle_state(tabless-md) {
@@ -71,7 +71,7 @@
 		}
 		form {
 			@include gridle(4);
-			@include gridle(6, tabless-md);
+			@include gridle(6, notebook-min tabless-md);
 			@include gridle(9, phoness);
 			@include gridle(11, phoness-min);
 			@include gridle_float(none);
@@ -172,6 +172,16 @@
 					@include placeholder {
 						color:$second_color !important;
 					}
+				}
+			}
+			.oneall_social_login {
+				@include gridle(11); 
+				@include gridle(12, phoness-min); 
+				@include gridle_float(none);
+				margin: 0 auto;
+				display: block;
+				.oneall_social_login_label {
+					@include gridle_hide();
 				}
 			}
 		}
